@@ -1,44 +1,67 @@
 package com.improvement_app.security.controllers;
 
-import com.improvement_app.security.payload.request.LoginRequest;
-import com.improvement_app.security.payload.response.JwtResponse;
+import com.improvement_app.security.command.request.LoginRequest;
+import com.improvement_app.security.command.request.SignupRequest;
+import com.improvement_app.security.command.response.JwtResponse;
+import com.improvement_app.security.command.response.MessageResponse;
 import com.improvement_app.security.jwt.JwtUtils;
+import com.improvement_app.security.models.ERole;
+import com.improvement_app.security.models.Role;
+import com.improvement_app.security.models.User;
+import com.improvement_app.security.repository.RoleRepository;
+import com.improvement_app.security.repository.UserRepository;
 import com.improvement_app.security.services.UserDetailsImpl;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
+@Slf4j
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RestController
 @RequestMapping("/api/auth")
+@RequiredArgsConstructor
 public class AuthController {
-	@Autowired
-    AuthenticationManager authenticationManager;
 
-//	@Autowired
-//	UserRepository userRepository;
-//
-//	@Autowired
-//	RoleRepository roleRepository;
+    private final AuthenticationManager authenticationManager;
+	private final UserRepository userRepository;
+	private final RoleRepository roleRepository;
+    private final PasswordEncoder encoder;
+	private final JwtUtils jwtUtils;
 
-	@Autowired
-    PasswordEncoder encoder;
+	@GetMapping("/addTestUser")
+	public void add() {
 
-	@Autowired
-	JwtUtils jwtUtils;
+		final Long id = 1L;
+		final String username = "test";
+		final String email = "test@test.pl";
+		final String password = "test";
+
+		Set<Role> roleSet = new HashSet<>();
+		roleSet.add(new Role(ERole.ROLE_USER));
+		roleSet.add(new Role(ERole.ROLE_ADMIN));
+
+		User user = new User(id, username, email, encoder.encode(password), roleSet);
+
+		userRepository.save(user);
+
+	}
 
 	@PostMapping("/signin")
-	public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest loginRequest) {
-		System.out.println("Login request");
+	public ResponseEntity<JwtResponse> authenticateUser(@Valid @RequestBody LoginRequest loginRequest) {
+		log.info("Login request: " + loginRequest.getUsername());
+
 		Authentication authentication = authenticationManager.authenticate(
 				new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
 
@@ -47,8 +70,14 @@ public class AuthController {
 		
 		UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
 		List<String> roles = userDetails.getAuthorities().stream()
-				.map(item -> item.getAuthority())
-				.collect(Collectors.toList());
+				.map(GrantedAuthority::getAuthority)
+				.toList();
+
+		log.info("Wysłany user: " + new JwtResponse(jwt,
+				userDetails.getId(),
+				userDetails.getUsername(),
+				userDetails.getEmail(),
+				roles) );
 
 		return ResponseEntity.ok(new JwtResponse(jwt,
 										 userDetails.getId(),
@@ -57,74 +86,58 @@ public class AuthController {
 										 roles));
 	}
 
-//	@GetMapping("/add")
-//	public void ddd(){
-//
-//		User u1 = new User("usernameTest", "damian@dddd.pl", encoder.encode("asasas1234"));
-//		Role adminRole = roleRepository.findByName(ERole.ROLE_USER)
-//				.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
-//
-//		Set<Role> roles = new HashSet<>();
-//		roles.add(adminRole);
-//		u1.setRoles(roles);
-//
-//		userRepository.save(u1);
-//
-//	}
+	@PostMapping("/signup")
+	public ResponseEntity<?> registerUser(@Valid @RequestBody SignupRequest signUpRequest) {
+		System.out.println("Request: " + signUpRequest.getRole());
+		if (userRepository.existsByUsername(signUpRequest.getUsername())) {
+			return ResponseEntity
+					.badRequest()
+					.body(new MessageResponse("Error: Username is already taken!"));
+		}
 
+		if (userRepository.existsByEmail(signUpRequest.getEmail())) {
+			return ResponseEntity
+					.badRequest()
+					.body(new MessageResponse("Error: Email is already in use!"));
+		}
 
-//	@PostMapping("/signup")
-//	public ResponseEntity<?> registerUser(@Valid @RequestBody SignupRequest signUpRequest) {
-//		System.out.println("Request: " + signUpRequest.getRole());
-//		if (userRepository.existsByUsername(signUpRequest.getUsername())) {
-//			return ResponseEntity
-//					.badRequest()
-//					.body(new MessageResponse("Error: Username is already taken!"));
-//		}
-//
-//		if (userRepository.existsByEmail(signUpRequest.getEmail())) {
-//			return ResponseEntity
-//					.badRequest()
-//					.body(new MessageResponse("Error: Email is already in use!"));
-//		}
-//
-//		// Create new user's account
-//		User user = new User(signUpRequest.getUsername(),
-//							 signUpRequest.getEmail(),
-//							 encoder.encode(signUpRequest.getPassword()));
-//
-//		Set<String> strRoles = signUpRequest.getRole();
-//		Set<Role> roles = new HashSet<>();
-//
-//		if (strRoles == null) {
-//			Role userRole = roleRepository.findByName(ERole.ROLE_USER)
-//					.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
-//			roles.add(userRole);
-//		} else {
-//			strRoles.forEach(role -> {
-//				switch (role) {
-//				case "admin":
-//					Role adminRole = roleRepository.findByName(ERole.ROLE_ADMIN)
-//							.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
-//					roles.add(adminRole);
-//
-//					break;
-//				case "user":
-//					Role userRole = roleRepository.findByName(ERole.ROLE_USER)
-//							.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
-//					roles.add(userRole);
-//
-//					break;
-//				default:
-//					throw new RuntimeException("Error: Role is not found.");
-//				}
-//			});
-//		}
-//
-//		user.setRoles(roles);
-//		System.out.println("User: " + user);
-//		userRepository.save(user);
-//
-//		return ResponseEntity.ok(new MessageResponse("User registered successfully!"));
-//	}
+		// Create new user's account
+		User user = new User(signUpRequest.getUsername(),
+							 signUpRequest.getEmail(),
+							 encoder.encode(signUpRequest.getPassword()));
+
+		Set<String> strRoles = signUpRequest.getRole();
+		Set<Role> roles = new HashSet<>();
+
+		if (strRoles == null) {
+			Role userRole = roleRepository.findByName(ERole.ROLE_USER)
+					.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
+			roles.add(userRole);
+		} else {
+			strRoles.forEach(role -> {
+				switch (role) {
+				case "admin":
+					Role adminRole = roleRepository.findByName(ERole.ROLE_ADMIN)
+							.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
+					roles.add(adminRole);
+
+					break;
+				case "user":
+					Role userRole = roleRepository.findByName(ERole.ROLE_USER)
+							.orElseThrow(() -> new RuntimeException("Error: Role is not found."));
+					roles.add(userRole);
+
+					break;
+				default:
+					throw new RuntimeException("Error: Role is not found.");
+				}
+			});
+		}
+
+		user.setRoles(roles);
+		System.out.println("User: " + user);
+		userRepository.save(user);
+
+		return ResponseEntity.ok(new MessageResponse("User registered successfully!"));
+	}
 }
