@@ -1,6 +1,5 @@
 package com.improvement_app.workouts.services;
 
-import com.improvement_app.ApplicationVariables;
 import com.improvement_app.googledrive.entity.DriveFileItemDTO;
 import com.improvement_app.googledrive.service.GoogleDriveFileService;
 import com.improvement_app.googledrive.types.MimeType;
@@ -14,23 +13,21 @@ import com.improvement_app.workouts.helpers.DriveFilesHelper;
 import com.improvement_app.workouts.helpers.ExercisesHelper;
 import com.improvement_app.workouts.services.data.*;
 import lombok.RequiredArgsConstructor;
-import org.apache.log4j.Logger;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static com.improvement_app.ApplicationVariables.EXCEL_EXTENSION;
+import static com.improvement_app.ApplicationVariables.PATH_TO_EXCEL_FILES;
 import static com.improvement_app.workouts.TrainingModuleVariables.*;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class GoogleDriveServiceImpl implements GoogleDriveService {
-
-    private static final String TMP_FILES_PATH = ApplicationVariables.PATH_TO_EXCEL_FILES;
-    private static final String EXCEL_EXTENSION = ApplicationVariables.EXCEL_EXTENSION;
-    private static final Logger LOGGER = Logger.getLogger(GoogleDriveServiceImpl.class);
 
     private final GoogleDriveFileService googleDriveFileService;
     private final ExerciseService exerciseService;
@@ -41,8 +38,8 @@ public class GoogleDriveServiceImpl implements GoogleDriveService {
     private final TrainingTemplateService trainingTemplateService;
 
     @Override
-    public List<Exercise> saveAllExercisesToDB(final String folderName) throws IOException{
-        LOGGER.info("Zapisuje cwiczenia do bazy danych z google drive z folderu: " + folderName);
+    public List<Exercise> saveAllExercisesToDB(final String folderName) throws IOException {
+        log.info("Zapisuje cwiczenia do bazy danych z google drive z folderu: %s".formatted(folderName));
 
         final List<DriveFileItemDTO> responseList = googleDriveFileService.getDriveFiles(folderName);
         final List<Exercise> exercises = new ArrayList<>();
@@ -56,14 +53,14 @@ public class GoogleDriveServiceImpl implements GoogleDriveService {
                 googleDriveFileService.downloadFile(driveFileItemDTO);
                 trainingsName.add(trainingName);
 
-                LOGGER.info("Dodaje do bazy danych trening o nazwie: " + trainingName);
+                log.info("Dodaje do bazy danych trening o nazwie: %s".formatted(trainingName));
 
-                final String fileName = TMP_FILES_PATH + trainingName + EXCEL_EXTENSION;
+                final String fileName = PATH_TO_EXCEL_FILES + trainingName + EXCEL_EXTENSION;
                 java.io.File file = new java.io.File(fileName);
                 List<Exercise> parsedExercises = DriveFilesHelper.parseExcelTrainingFile(file);
                 exercises.addAll(parsedExercises);
             } else {
-                LOGGER.info("Trening o nazwie: " + trainingName + ", juz istnieje w bazie danych");
+                log.info("Trening o nazwie: %s, juz istnieje w bazie danych".formatted(trainingName));
             }
         }
 
@@ -80,7 +77,7 @@ public class GoogleDriveServiceImpl implements GoogleDriveService {
         for (DriveFileItemDTO driveFileItemDTO : responseList) {
             googleDriveFileService.downloadFile(driveFileItemDTO);
 
-            final String fileName = TMP_FILES_PATH + driveFileItemDTO.getName() + EXCEL_EXTENSION;
+            final String fileName = PATH_TO_EXCEL_FILES + driveFileItemDTO.getName() + EXCEL_EXTENSION;
             final java.io.File file = new java.io.File(fileName);
 
             final List<String> values = DriveFilesHelper.parseExcelSimpleFile(file);
@@ -98,35 +95,35 @@ public class GoogleDriveServiceImpl implements GoogleDriveService {
             exerciseNameService.deleteAllExerciseNames();
             List<Name> nameList = values.stream()
                     .map(Name::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             exerciseNameService.saveAllExerciseNames(nameList);
         } else if (fileName.contains(PLACES)) {
             exercisePlaceService.deleteAllExercisePlaces();
             List<Place> placeList = values.stream()
                     .map(Place::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             exercisePlaceService.saveAllExercisePlaces(placeList);
         } else if (fileName.contains(PROGRESSES)) {
             exerciseProgressService.deleteAllExerciseProgresses();
             List<Progress> progressList = values.stream()
                     .map(Progress::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             exerciseProgressService.saveAllExerciseProgresses(progressList);
         } else if (fileName.contains(TYPES)) {
             exerciseTypeService.deleteAllExerciseTypes();
             List<Type> typeList = values.stream()
                     .map(Type::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             exerciseTypeService.saveAllExerciseTypes(typeList);
         }
     }
 
     @Override
-    public void initApplicationExercises() throws IOException{
+    public void initApplicationExercises() throws IOException {
         exerciseService.deleteAllExercises();
         saveAllExercisesToDB(DRIVE_TRAININGS_FOLDER_NAME);
     }
@@ -140,7 +137,7 @@ public class GoogleDriveServiceImpl implements GoogleDriveService {
         for (DriveFileItemDTO driveFileItemDTO : responseList) {
             googleDriveFileService.downloadFile(driveFileItemDTO);
 
-            final String fileName = TMP_FILES_PATH + driveFileItemDTO.getName() + EXCEL_EXTENSION;
+            final String fileName = PATH_TO_EXCEL_FILES + driveFileItemDTO.getName() + EXCEL_EXTENSION;
             final java.io.File file = new java.io.File(fileName);
 
             final List<String> values = DriveFilesHelper.parseExcelSimpleFile(file);
@@ -153,7 +150,7 @@ public class GoogleDriveServiceImpl implements GoogleDriveService {
     }
 
     @Override
-    public void deleteTraining(String trainingName) throws IOException{
+    public void deleteTraining(String trainingName) throws IOException {
         final String fileId = googleDriveFileService.getGoogleDriveObjectId(trainingName, MimeType.DRIVE_SHEETS);
         googleDriveFileService.deleteFile(fileId);
     }
